# BSTU_SADP_2_course_1_semester

Lab_0/: CMakeLists.txt
Lab_0/assets/: students.txt
Lab_0/src/: main.cpp
Lab_1/src/: main.cpp
Lab_2/assets/: input.txt
Lab_2/src/: main.cpp
Lab_3/src/: main.cpp
Lab_3_common/src/: main.cpp
Lab_4/src/: main.cpp
Lab_5/src/: main.cpp
Lab_6/src/: main.cpp
